# CloudCompare

libs/CCAppCommon/: CMakeLists.txt
libs/qCC_db/include/: ccPointCloud.h
libs/qCC_db/src/: ccPointCloud.cpp
plugins/core/IO/: CMakeLists.txt
plugins/core/IO/qLibpointmatcher/: CMakeLists.txt  info.json  qLibpointmatcher.qrc
plugins/core/IO/qLibpointmatcher/include/: CMakeLists.txt  LibpointmatcherConvert.h  LibpointmatcherFilter.h
plugins/core/IO/qLibpointmatcher/src/: CMakeLists.txt  LibpointmatcherConvert.cpp  LibpointmatcherFilter.cpp
plugins/core/Standard/: CMakeLists.txt
plugins/core/Standard/qLibpointmatcher/: CMakeLists.txt  info.json  qLibpointmatcher.qrc
plugins/core/Standard/qLibpointmatcher/include/: CMakeLists.txt  Libpointmatcher.h  LibpointmatcherCommands.h  LibpointmatcherConvergenceDialog.h  LibpointmatcherConvert.h  LibpointmatcherDialog.h  LibpointmatcherFilter.h  LibpointmatcherOutlierDialog - Copie.h  LibpointmatcherOutlierDialog.h  LibpointmatcherProcess.h  LibpointmatcherTools.h
plugins/core/Standard/qLibpointmatcher/src/: CMakeLists.txt  Libpointmatcher.cpp  LibpointmatcherConvergenceDialog.cpp  LibpointmatcherConvert.cpp  LibpointmatcherDialog.cpp  LibpointmatcherFilter.cpp  LibpointmatcherOutlierDialog - Copie.cpp  LibpointmatcherOutlierDialog.cpp  (+2 more)
qCC/: CMakeLists.txt  ccImageViewer.cpp  ccImageViewer.h  ccPointPropertiesDlg.cpp  ccPointPropertiesDlg.h  mainwindow.cpp  mainwindow.h
qCC/db_tree/: ccPropertiesTreeDelegate.cpp  ccPropertiesTreeDelegate.h
qCC/ui_templates/: mainWindow.ui  pointPropertiesDlg.ui
(+9 files in other folders)
